--- a/c02_design_standards.html
+++ b/c02_design_standards.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <h1>Website Design</h1>
     <nav>
         <ul>
             <li><a href="c01_site_organization.html">Website Organization</a></li>
