--- a/c07_mobile_first.html
+++ b/c07_mobile_first.html
@@ -21,19 +21,23 @@
         </ul>
     </nav>
     <main>
-        <h2>Website Organization Options</h2>
-        <dl>
-            <dt>Hierarchical</dt>
-                <dd>home page controls entire site</dd>
-            <dt>Linear</dt>
-                <dd>used for tutorials, where page sequence matters</dd>
-            <dt>Random</dt>
-                <dd>used for artistic effect, but often disorienting/offputting to casual visitors</dd>
-        </dl>
+        <h2>Mobile First Design</h2>
+
+        <p>Mobile first design is more than simply choosing a single-column layout that is touch-screeen friendly. Consider the following guiding principles:</p>
+
+        <ul>
+            <li>relatively small screen with limited space for paragraph text</li>
+            <li>may have data restrictions</li>
+            <li>mobile browsers may not support obscure fonts or new HTML/CSS features</li>
+            <li>touch-only interaction means that clickable options need space to be useful</li>
+            <li>limited screen space means you must be more aggressive in trimming out non-essential content</li>
+            <li>mobile devices are often used in sunlit areas, meaning high contrast designs are more important</li>
+        </ul>
     </main>
-    <footer>
-        &copy;2025 Matthew Gentle
-    </footer>
 </body>
+
+<footer>
+    &copy;2025 Matthew Gentle
+</footer>
 
 </html>
