--- a/c03_HSLa_color.html
+++ b/c03_HSLa_color.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <h1>Website Design</h1>
     <nav>
         <ul>
             <li><a href="c01_site_organization.html">Website Organization</a></li>
